--- a/Coding_AI/Coding_AI_Intro_to_PyTorch_Skeleton.ipynb
+++ b/Coding_AI/Coding_AI_Intro_to_PyTorch_Skeleton.ipynb
@@ -5,13 +5,14 @@
     "colab": {
       "name": "Coding AI - Intro to PyTorch - Skeleton.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "oLSMwg84dHjf"
+      ]
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -77,7 +78,10 @@
         "\n",
         "\n",
         "\n",
-        "# What are the min-max values? Does this tell us something about the data?\n"
+        "\n",
+        "\n",
+        "# What are the min-max values? Does this tell us something about the data?\n",
+        "print(f\"Min  Max \")"
       ],
       "execution_count": null,
       "outputs": []
@@ -119,14 +123,16 @@
         "\n",
         "\n",
         "\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "# Split training into training and validation set\n",
+        "\n",
         "\n",
         "\n",
         "# Check dimensions\n",
         "print(train_data.shape, validation_data.shape, test_data.shape)\n",
         "\n",
-        "# Normalize all three datasets (using mean and standard deviation from only the training set)\n",
+        "# Normalize all three datasets (using mean and std from only the training set)\n",
         "# Also possible to use min-max scaling\n",
         "\n",
         "# Calc mean and std from training set data\n",
@@ -134,7 +140,7 @@
         "\n",
         "print(f\"mean_train: {mean_train:.5f}, std_train: {std_train:.5f}\")\n",
         "\n",
-        "# Normalize (X - mean) / std\n",
+        "# Normalize\n",
         "\n",
         "\n",
         "\n",
@@ -187,16 +193,17 @@
         "    def __init__(self, data, targets):\n",
         "        super(MyMNISTdataset, self)\n",
         "        \n",
+        "        \n",
         "\n",
         "    def __getitem__(self, idx):\n",
+        "        \n",
         "        \n",
         "\n",
         "\n",
         "    def __len__(self):\n",
         "        \n",
         "\n",
-        "# Create the three dataset\n",
-        "\n",
+        "# Create the datasets using the class\n",
         "\n",
         "\n",
         "\n",
@@ -253,7 +260,11 @@
         "# The cool stuff begins:\n",
         "### Creating the neural network\n",
         "\n",
-        "Simple network building with nn.Sequential()"
+        "Simple network building with nn.Sequential()\n",
+        "\n",
+        "For e.g. a Multilayer Perceptron\n",
+        "\n",
+        "<img src=\"https://i.imgur.com/DGY97pw.png\" height=\"250\">"
       ]
     },
     {
@@ -273,7 +284,6 @@
         "model = nn.Sequential(\n",
         "                      \n",
         "                      \n",
-        "\n",
         "\n",
         "                      \n",
         "                    )\n",
@@ -311,16 +321,15 @@
         "class SimpleMLP(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(SimpleMLP, self).__init__()\n",
-        "\n",
-        "\n",
+        "        \n",
+        "        \n",
         "\n",
         "\n",
         "    def forward(self, x):\n",
+        "        \n",
+        "        \n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "        \n",
         "\n",
         "model = SimpleMLP()\n",
         "print(\"Parameters: \", count_parameters(model))"
@@ -363,22 +372,28 @@
       "source": [
         "import time\n",
         "\n",
-        "model = SimpleMLP()\n",
+        "# Create the model\n",
+        "\n",
         "print(\"Parameters: \", count_parameters(model))\n",
         "\n",
-        "# Optimizer\n",
+        "# Choose optimizer\n",
         "\n",
-        "# Loss function\n",
+        "# Select loss function\n",
         "\n",
         "\n",
-        "# How long to train?\n",
+        "# Training epochs\n",
         "\n",
         "for i in range(epochs):\n",
         "    start_time = time.time()\n",
         "    model.train()\n",
         "    \n",
+        "    \n",
         "\n",
         "\n",
+        "\n",
+        "        # Do backpropagation\n",
+        "        \n",
+        "        \n",
         "\n",
         "\n",
         "\n",
@@ -390,13 +405,13 @@
         "    model.eval()\n",
         "    with torch.no_grad():\n",
         "        \n",
+        "        \n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
+        "        \n",
         "\n",
         "    # Epoch done. Print losses\n",
         "    print(f\"Epoch: {i}, train_loss: {train_loss:.4f}, valid_loss: {valid_loss:.4f}, Correct predictions: {correct*100:.2f}%, Time: {time.time()-start_time:.3f}s\")"
@@ -428,6 +443,7 @@
         "with torch.no_grad():\n",
         "    for data, target in test_dl:\n",
         "        y_pred = model(torch.flatten(data, 1))\n",
+        "        # y_pred = model(data)\n",
         "        loss = nn.functional.cross_entropy(y_pred, target)\n",
         "        test_loss += loss.item()\n",
         "        # Check correct predictions\n",
@@ -435,45 +451,6 @@
         "    test_loss /= len(test_dl)\n",
         "    test_correct /= len(test_dl.dataset)\n",
         "print(f\"Test-scores: Loss: {test_loss:.4f}, Correct Predictions: {test_correct*100:.2f}%\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oLSMwg84dHjf",
-        "colab_type": "text"
-      },
-      "source": [
-        "### But how do I run this on the GPU?!\n",
-        "Move the model and the data to the GPU!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bXNf586odZFX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Do I have a GPU in the first place?\n",
-        "import torch\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lne3mlvfdUP3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "# Is it faster?"
       ],
       "execution_count": null,
       "outputs": []
@@ -528,6 +505,97 @@
         "        x = self.max2(x)\n",
         "        x = self.lin(torch.flatten(x, 1))\n",
         "        return x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oLSMwg84dHjf",
+        "colab_type": "text"
+      },
+      "source": [
+        "### But how do I run this on the GPU?!\n",
+        "Move the model and the data to the GPU!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bXNf586odZFX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Do I have a GPU in the first place?\n",
+        "import torch\n",
+        "print(\"Cuda available!\" if torch.cuda.is_available() else \"Only CPU available :(\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lne3mlvfdUP3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "dev = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "\n",
+        "model = SimpleMLP()\n",
+        "# model = MyCNN()\n",
+        "print(\"Parameters: \", count_parameters(model))\n",
+        "\n",
+        "model.to(dev)\n",
+        "opt = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+        "loss_func = nn.CrossEntropyLoss()\n",
+        "\n",
+        "epochs = 5\n",
+        "for i in range(epochs):\n",
+        "    start_time = time.time()\n",
+        "    model.train()\n",
+        "    train_loss = 0.0\n",
+        "    for data, target in train_dl:\n",
+        "        data = data.to(dev)\n",
+        "        target = target.to(dev)\n",
+        "        y_pred = model(torch.flatten(data, 1))\n",
+        "        # y_pred = model(data)\n",
+        "        loss = loss_func(y_pred, target)\n",
+        "\n",
+        "        # Do backpropagation\n",
+        "        opt.zero_grad()\n",
+        "        loss.backward()\n",
+        "        opt.step()\n",
+        "\n",
+        "        train_loss += loss.item()\n",
+        "    train_loss /= len(train_dl)\n",
+        "\n",
+        "    # Validate with valid_dl\n",
+        "    correct = 0.0\n",
+        "    valid_loss = 0.0\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        for data, target in valid_dl:\n",
+        "            data = data.to(dev)\n",
+        "            target = target.to(dev)\n",
+        "            y_pred = model(torch.flatten(data, 1))\n",
+        "            # y_pred = model(data)\n",
+        "            target = target\n",
+        "\n",
+        "            loss = loss_func(y_pred, target)\n",
+        "            valid_loss += loss.item()\n",
+        "            # Check correct predictions\n",
+        "            correct += torch.sum(torch.argmax(y_pred, dim=1) == target).item()\n",
+        "    valid_loss /= len(valid_dl)\n",
+        "    correct /= len(valid_dl.dataset)\n",
+        "\n",
+        "    # Epoch done. Print losses\n",
+        "    print(f\"Epoch: {i}, train_loss: {train_loss:.4f}, valid_loss: {valid_loss:.4f}, Correct predictions: {correct*100:.2f}%, Time: {time.time()-start_time:.3f}s\")"
       ],
       "execution_count": null,
       "outputs": []
