--- a/Coding_AI/Coding_AI_Intro_to_PyTorch.ipynb
+++ b/Coding_AI/Coding_AI_Intro_to_PyTorch.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Coding AI - Intro to PyTorch.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "oLSMwg84dHjf"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -1022,7 +1024,7 @@
       "source": [
         "!pip3 install torch torchvision"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1124,7 +1126,7 @@
         "# What are the min-max values? Does this tell us something about the data?\n",
         "print(\"Min \", torch.min(downloaded_train.data).item(), \" Max \", torch.max(downloaded_train.data).item())"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1339,7 +1341,7 @@
         "print(f\"Validation-data: Mean: {torch.mean(validation_data).item():.4f} Std: {torch.std(validation_data).item():.4f}\")\n",
         "print(f\"Test-data:       Mean: {torch.mean(test_data).item():.4f} Std: {torch.std(test_data).item():.4f}\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1415,7 +1417,7 @@
         "\n",
         "print(\"Datasets created!\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1461,7 +1463,7 @@
         "\n",
         "# What is the length of the dataloader?"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1488,7 +1490,11 @@
         "# The cool stuff begins:\n",
         "### Creating the neural network\n",
         "\n",
-        "Simple network building with nn.Sequential()"
+        "Simple network building with nn.Sequential()\n",
+        "\n",
+        "For e.g. a Multilayer Perceptron\n",
+        "\n",
+        "<img src=\"https://i.imgur.com/DGY97pw.png\" height=\"250\">"
       ]
     },
     {
@@ -1518,7 +1524,7 @@
         "                    )\n",
         "print(\"Parameters: \", count_parameters(model))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1577,7 +1583,7 @@
         "model = SimpleMLP()\n",
         "print(\"Parameters: \", count_parameters(model))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1672,7 +1678,7 @@
         "    # Epoch done. Print losses\n",
         "    print(f\"Epoch: {i}, train_loss: {train_loss:.4f}, valid_loss: {valid_loss:.4f}, Correct predictions: {correct*100:.2f}%, Time: {time.time()-start_time:.3f}s\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1725,7 +1731,7 @@
         "    test_correct /= len(test_dl.dataset)\n",
         "print(f\"Test-scores: Loss: {test_loss:.4f}, Correct Predictions: {test_correct*100:.2f}%\")"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1735,6 +1741,60 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IjP9q08ehRDH",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# Here is an example CNN for MNIST"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S2SFPfVFexky",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class MyCNN(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(MyCNN, self).__init__()\n",
+        "        self.conv1 = nn.Conv2d(1, 16, kernel_size=5, padding=0)\n",
+        "        # 28-5+1 = 24\n",
+        "        self.max1 = nn.MaxPool2d(2)\n",
+        "        # 24/2 = 12\n",
+        "        self.conv2 = nn.Conv2d(16, 4, kernel_size=3, padding=0)\n",
+        "        # 12-3+1 = 10\n",
+        "        self.max2 = nn.MaxPool2d(2)\n",
+        "        # 10/2 = 5\n",
+        "        self.lin = nn.Linear(5*5*4, 10)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Add a dummy dimension\n",
+        "        x = torch.unsqueeze(x, 1)\n",
+        "        x = self.conv1(x)\n",
+        "        x = F.relu(x)\n",
+        "        x = self.max1(x)\n",
+        "        x = self.conv2(x)\n",
+        "        x = F.relu(x)\n",
+        "        x = self.max2(x)\n",
+        "        x = self.lin(torch.flatten(x, 1))\n",
+        "        return x"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1753,8 +1813,7 @@
         "id": "bXNf586odZFX",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "014da030-dd4e-46eb-82f7-cced5606276e"
       },
@@ -1763,7 +1822,7 @@
         "import torch\n",
         "print(\"Cuda available!\" if torch.cuda.is_available() else \"Only CPU available :(\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1780,8 +1839,7 @@
         "id": "lne3mlvfdUP3",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "60c784f1-d947-4d35-9fd5-6a3623602c45"
       },
@@ -1840,7 +1898,7 @@
         "    # Epoch done. Print losses\n",
         "    print(f\"Epoch: {i}, train_loss: {train_loss:.4f}, valid_loss: {valid_loss:.4f}, Correct predictions: {correct*100:.2f}%, Time: {time.time()-start_time:.3f}s\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1855,60 +1913,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IjP9q08ehRDH",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "# Here is an example CNN for MNIST"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S2SFPfVFexky",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import torch\n",
-        "from torch import nn\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "class MyCNN(nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super(MyCNN, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(1, 16, kernel_size=5, padding=0)\n",
-        "        # 28-5+1 = 24\n",
-        "        self.max1 = nn.MaxPool2d(2)\n",
-        "        # 24/2 = 12\n",
-        "        self.conv2 = nn.Conv2d(16, 4, kernel_size=3, padding=0)\n",
-        "        # 12-3+1 = 10\n",
-        "        self.max2 = nn.MaxPool2d(2)\n",
-        "        # 10/2 = 5\n",
-        "        self.lin = nn.Linear(5*5*4, 10)\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        # Add a dummy dimension\n",
-        "        x = torch.unsqueeze(x, 1)\n",
-        "        x = self.conv1(x)\n",
-        "        x = F.relu(x)\n",
-        "        x = self.max1(x)\n",
-        "        x = self.conv2(x)\n",
-        "        x = F.relu(x)\n",
-        "        x = self.max2(x)\n",
-        "        x = self.lin(torch.flatten(x, 1))\n",
-        "        return x"
-      ],
-      "execution_count": 18,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
