--- a/NLP_AI/Topic_Modeling.ipynb
+++ b/NLP_AI/Topic_Modeling.ipynb
@@ -95,7 +95,7 @@
         "  if idx == 10:\n",
         "    break"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "    dataset[date].append(tweet)\n",
         "    \n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "for key, value in dataset.items():\n",
         "  print(key,\":\", len(value), \"tweets\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
         "\n",
         "print(fauci_counts)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "plt.xlabel(\"Dates\")\n",
         "plt.ylabel(\"Tweets with Fauci's name\")\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +398,7 @@
         "plt.xlabel(\"Dates\")\n",
         "plt.ylabel(\"Tweets with name\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +722,7 @@
         "id": "HyfZtpYy_sHY"
       },
       "source": [
-        "break # from here on, the code is non-deterministic due to the LDA\n",
+        "# break # from here on, the code is non-deterministic due to the LDA\n",
         "# Therefore, we stop this cell and continue with the pre-trained models\n",
         "# This way we ensure that the evaluation is in line with the presentation"
       ],
